import 'package:flutter/material.dart';

class Tab2Screen extends StatelessWidget {
  const Tab2Screen({super.key});

  @override
  Widget build(BuildContext context) {
    return Center(
      child: Text('Coming Soon'),
    );
  }
}
